--- a/inc/style.tex
+++ b/inc/style.tex
@@ -20,7 +20,7 @@
 \usepackage[german=guillemets]{csquotes} % sehr schöne Anführungszeichen
 
 %disable before printing -> pressable links will show at the printed page!!! Only used for digital pdf's
-\usepackage[breaklinks=true]{hyperref}
+\usepackage[breaklinks=true, hidelinks]{hyperref}
 
 % Optionen fürs Layout
 \KOMAoptions{
