--- a/bib/Seminararbeit.bib
+++ b/bib/Seminararbeit.bib
@@ -101,6 +101,7 @@
 
 @book{pieprzyk2010topics,
   title={Topics in Cryptology - CT-RSA 2010: The 10th Cryptographers' Track at the RSA Conference 2010, San Francisco, CA, USA, March 1-5, 2010. Proceedings},
+  shorttitle={Topics in Cryptology - CT-RSA},
   author={Pieprzyk, J.},
   isbn={9783642119255},
   series={Lecture Notes in Computer Science},
@@ -149,6 +150,7 @@
 
 @online{zum2020,
   title = {Der {{RSA}} - {{Algorithmus}}},
+  author = {Busse, Michael and Schmitt, Matthias and Steeg, Jörg},
   url = {https://www.zum.de/Faecher/Inf/RP/infschul/kr_rsa.html},
   urldate = {2020-11-08},
 }
