--- a/Seminararbeit_RSA.tex
+++ b/Seminararbeit_RSA.tex
@@ -26,7 +26,7 @@
 
     \section[Verschlüsselung allgemein]{Verschlüsselung im Allgemeinen}
     \subsection{Definition}
-    Bei der Verschlüsselung handelt es sich um eine Form der Codierung, hierzu gehört zum Beispiel auch der \emph{Morsecode} oder die allgegenwärtigen \emph{Borcodes}, allerdings liegt die Zielsetzung bei der Verschlüsselung nicht nur einfach darin die Information in ein anderes Format zu übertragen, sondern hier will man \enquote{die Informationen systematisch so verfälschen, dass sie nicht rekonstruiert werden können, es sei denn, durch ausdrücklich hierzu Berechtigte.} \footcite[263]{dankmeier2006}
+    Bei der Verschlüsselung handelt es sich um eine Form der Codierung, hierzu gehört zum Beispiel auch der \emph{Morsecode} oder die allgegenwärtigen \emph{Barcodes}, allerdings liegt die Zielsetzung bei der Verschlüsselung nicht nur einfach darin die Information in ein anderes Format zu übertragen, sondern hier will man \enquote{die Informationen systematisch so verfälschen, dass sie nicht rekonstruiert werden können, es sei denn, durch ausdrücklich hierzu Berechtigte.} \footcite[263]{dankmeier2006}
     Die Verschlüsselung gehört zum Bereich der \emph{Kryptographie}, womit die \enquote{Wissenschaft vom geheimen Schreiben} \footcite[1]{watjen2008} gemeint ist.
 
     \subsection*{Terminologie}
